Fixed Mobile CSS
- table row height was too small to display properly on mobile before

--- a/index.css
+++ b/index.css
@@ -119,7 +119,7 @@ td {
 }
 
 #resultsDiv {
-    margin: 30px 20px 20px 20px;
+    margin: 30px 20px 0px 20px;
 }
 
 #weaponGrid1, #weaponGrid2, #weaponGrid1Results {
@@ -514,7 +514,7 @@ th {
 }
 
 tr {
-    height: 28px;
+    height: 29px;
 }
 
 tr:nth-child(1) {
